scss/pages/_sponsor.scss
.page-slug-sponsors {
  padding: 0;
  & .sponsor__block {
    .wordcamp-sponsors__featured-image {
      max-width: 300px;
      width: 100%;
      display: inline-block;
      border: 1px solid rgba(0, 0, 0, 0.05);
      padding: 1rem;
      border-radius: 5px;
      & a {
        display: block;
        width: 100%;
        & img {
          width: 100%;
          height: 100%;
          display: block;
          object-fit: contain;
        }
      }
    }
    & .wordcamp-sponsors__title a {
      font-size: 30px;
      font-weight: 600;
      text-decoration: none;
      color: #000;
      padding-left: 30px;
      &::after {
        content: "";
        width: 4px;
        height: 100%;
        background: $primary-color;
        position: absolute;
        top: 0;
        left: 0;
      }
    }
  }
}

